# expats

./: README.md  build_files.sh  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  rules.md  vercel.json
.github/: copilot-instructions.md
.github/workflows/: django.yml
apps/blog/: models.py  routers.py  tests.py
apps/common/: admin_tools.py  constants.py
apps/companies/: admin.py  apps.py  constants.py  models.py  permissions.py  routers.py  serializers.py  signals.py  tests.py  utils.py  views.py
apps/jobs/: apps.py  constants.py  models.py  routers.py  serializers.py  tests.py  views.py
apps/locations/: admin.py  apps.py  models.py  tests.py
apps/pdf_processor/: CROATIAN_LABOR_PARSER.md  SCRAPER_USAGE.md  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/reviews/: apps.py  models.py  routers.py  serializers.py  tests.py  views.py
apps/users/: routers.py  serializers.py  tests.py  views.py
blog/: models.py  routers.py  urls.py  views.py
blog/migrations/: 0004_post_name_alter_post_language_code_and_more.py  0005_alter_post_language_code.py  0006_alter_post_language_code.py  0007_alter_post_language_code.py  0008_alter_post_language_code.py  0009_alter_post_language_code.py  0010_alter_post_language_code.py  0011_alter_post_language_code.py  0012_alter_post_language_code.py  0013_alter_post_language_code.py  0014_alter_post_language_code.py  0015_alter_post_language_code.py  0016_alter_post_language_code.py  0017_alter_post_language_code.py  0018_alter_post_language_code.py  0019_alter_post_language_code.py  0020_alter_post_language_code.py  0021_alter_post_language_code.py  0022_alter_post_language_code.py  0023_alter_post_language_code.py  0024_alter_post_language_code.py  0025_alter_post_language_code.py  0026_alter_post_language_code.py  0027_alter_post_language_code.py
common/: constants.py  models.py
companies/: filters.py  models.py  permissions.py  routers.py  serializers.py  signals.py  tests.py  views.py
companies/migrations/: 0001_initial.py  0002_initial.py  0005_alter_branch_options.py  (+2 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
expats/: asgi.py  settings.py  urls.py  wsgi.py
expatsapp/: admin.py  apps.py  constants.py  models.py  routers.py  serializers.py  tests.py  views.py
fixtures/: companies.json  company.json  countries.json
jobs/: admin.py  models.py  routers.py  serializers.py  views.py
locations/: admin.py  constants.py  models.py
postman/: users.json
reviews/: models.py  routers.py  serializers.py  views.py
users/: models.py  serializers.py  tests.py  views.py
(+61 files in other folders)
