[project]
name = "expats"
version = "0.1.0"
dependencies = [
    "Django>=5.2,<6.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "djangorestframework>=3.14.0,<4.0.0",
    "drf-spectacular>=0.27.1,<0.28.0",
    "drf-nested-routers>=0.93.5,<0.94.0",
    "Markdown>=3.6,<4.0",
    "django-filter==23.5",
    "pytest-django>=4.8.0,<5.0.0",
    "django-cors-headers>=4.4.0,<5.0.0",
    "cloudinary>=1.42.2,<2.0.0",
    "geopy>=2.4.1,<3.0.0",
    "requests>=2.32.0,<3.0.0"
]

[tool.poetry]
name = "expats"
version = "0.1.0"
description = ""
authors = ["Gustavo Tempel <gtempel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
drf-nested-routers = "^0.93.5"
Markdown = "^3.6"
django-filter = "23.5"
pytest-django = "^4.8.0"
django-cors-headers = "^4.4.0"
cloudinary = "^1.42.2"
geopy = "^2.4.1"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
