
[project]
name = "expats"
version = "0.1.0"
description = "Django app for expatriate data"
authors = [{ name = "Gustavo Tempel", email = "gtempel@hotmail.com" }]
requires-python = ">=3.13"
dependencies = [
	"Django>=5.2,<6.0",
	"python-dotenv>=1.0.1,<2.0",
	"psycopg2-binary>=2.9.9,<3.0",
	"djangorestframework>=3.14.0,<4.0",
	"drf-spectacular>=0.27.1,<0.28",
	"drf-nested-routers>=0.93.5,<0.94",
	"Markdown>=3.6,<4.0",
	"django-filter==23.5",
	"pytest-django>=4.8.0,<5.0",
	"django-cors-headers>=4.4.0,<5.0",
	"cloudinary>=1.42.2,<2.0",
	"geopy>=2.4.1,<3.0",
	"requests>=2.32.0,<3.0",
	"whitenoise>=6.11.0",
	"pytest-cov>=7.0.0",
	"pdfplumber>=0.11.9",
	"pandas>=3.0.0",
	"pillow>=12.1.0",
	"pypdfium2>=5.3.0",
	"beautifulsoup4>=4.12.0,<5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
